--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- <meta http-equiv="refresh" content="2"> -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
@@ -18,21 +19,22 @@
             <div id="top">
                 <p id="front_heading">Stay updated!</p>
                 <p>Join 60,000+ product managers receiving monthly updates on:</p>
+                <div id="middle">
+                    <div id="item">
+                        <img src="./assets/images/icon-success.svg" alt="">
+                        <p>Product discovery and building what matters</p>
+                    </div>
+                    <div id="item">
+                        <img src="./assets/images/icon-success.svg" alt="">
+                        <p>Measuring to ensure updates are a success</p>
+                    </div>
+                    <div id="item">
+                        <img src="./assets/images/icon-success.svg" alt="">
+                        <p>And much more!</p>
+                    </div>
+                </div>
             </div>
-            <div id="middle">
-                <div id="item">
-                    <img src="./assets/images/icon-success.svg" alt="">
-                    <p>Product discovery and building what matters</p>
-                </div>
-                <div id="item">
-                    <img src="./assets/images/icon-success.svg" alt="">
-                    <p>Measuring to ensure updates are a success</p>
-                </div>
-                <div id="item">
-                    <img src="./assets/images/icon-success.svg" alt="">
-                    <p>And much more!</p>
-                </div>
-            </div>
+
             <div id="bottom">
                 <div id="labels">
                     <label for="email">Email address</label>
